# VeldraML

./: .gitignore  AGENTS.md  DESIGN_BLUEPRINT.md  HISTORY.md  HISTORY_ARCHIVE.md  README.md  check_syntax.py  coverage_final.txt  coverage_report.txt  debug_output.txt  pyproject.toml  run_tests_debug.py  test_coverage_2_debug.txt  test_coverage_2_debug_2.txt  test_coverage_2_result.txt  test_debug_output.txt  test_full_result.txt  test_list.txt  test_new_layout_result.txt  test_output_2.txt  test_pages_result_2.txt  test_pages_result_3.txt
data/: ames_housing.csv  bike_sharing.csv  cps_panel.csv  lalonde.csv  penguins.csv  quick_reference_sources.json  titanic.csv
docs/: phase26_2_parity_report.md
examples/: README.md  __init__.py  common.py  evaluate_demo_artifact.py  evaluate_demo_binary_artifact.py  evaluate_demo_frontier_artifact.py  evaluate_demo_multiclass_artifact.py  generate_data_dr.py  generate_data_drdid.py  prepare_demo_data.py  prepare_demo_data_binary.py  prepare_demo_data_frontier.py  prepare_demo_data_multiclass.py  run_demo_binary.py  run_demo_export.py  run_demo_frontier.py  run_demo_multiclass.py  run_demo_regression.py  run_demo_simulate.py  run_demo_tune.py
notebooks/: binary_tuning_analysis_workflow.ipynb  frontier_analysis_workflow.ipynb  lalonde_dr_analysis_workflow.ipynb  lalonde_drdid_analysis_workflow.ipynb  phase26_2_execution_manifest.json  phase26_2_uc01_regression_fit_evaluate.ipynb  phase26_2_uc02_binary_tune_evaluate.ipynb  phase26_2_uc03_frontier_fit_evaluate.ipynb  phase26_2_uc04_causal_dr_estimate.ipynb  phase26_2_uc05_causal_drdid_estimate.ipynb  phase26_2_uc06_causal_dr_tune.ipynb  phase26_2_uc07_artifact_evaluate.ipynb  phase26_2_uc08_artifact_reevaluate.ipynb  phase26_2_uc09_export_python_onnx.ipynb  phase26_2_uc10_export_html_excel.ipynb  phase26_2_ux_audit.ipynb  phase26_3_execution_manifest.json  phase26_3_uc_multiclass_fit_evaluate.ipynb  phase26_3_uc_timeseries_fit_evaluate.ipynb  reference_index.ipynb  regression_analysis_workflow.ipynb  simulate_analysis_workflow.ipynb
scripts/: generate_frontier_demo_data.py  generate_phase263_notebooks.py  generate_quick_reference_notebook_specs.py  generate_quick_reference_notebooks.py  generate_runconfig_reference.py  prepare_quick_reference_data.py  start_gui.cmd  start_gui.ps1  start_gui.sh
temp_data/: test_upload.csv
tests/: conftest.py  debug_imports.py  test_api_surface.py  test_artifact_additional.py  test_artifact_param_roundtrip.py  test_artifact_roundtrip.py  test_artifact_store.py  test_auto_num_leaves.py  test_auto_split_selection.py  test_binary_artifact_roundtrip.py  test_binary_class_weight.py  test_binary_edge_cases.py  test_binary_evaluate_metrics.py  test_binary_fit_smoke.py  test_binary_internal.py  test_binary_oof_calibration.py  test_binary_predict_contract.py  test_binary_threshold_optimization.py  test_causal_diagnostics.py  test_causal_diagnostics_unit.py  test_causal_dr.py  test_causal_drdid.py  test_cli_config_migrate.py  (+245 more)
(+134 files in other folders)
