[project]
name = "veldra"
version = "0.1.0"
description = "Config-driven LightGBM analysis library scaffold"
readme = "README.md"
authors = [
    { name = "nbx", email = "nbx@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "joblib==1.5.3",
    "lightgbm==4.6.0",
    "numpy==2.4.2",
    "optuna==4.0.0",
    "pandas==3.0.0",
    "pyarrow==23.0.0",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
]

[project.optional-dependencies]
export-onnx = [
    "onnx==1.19.1",
    "onnxconverter-common==1.16.0",
    "onnxmltools==1.14.0",
    "onnxruntime==1.23.2",
]
gui = [
    "dash==2.18.2",
    "dash-bootstrap-components==1.7.1",
    "plotly==5.24.1",
    "openpyxl==3.1.5",
    "jinja2==3.1.6",
]
export-report = [
    # SHAP is environment-sensitive with the current NumPy pin.
    # Install manually in compatible environments if needed:
    # uv add shap --optional export-report
]
notebook = [
    "ipykernel==6.30.1",
    "jupyterlab==4.4.10",
    "matplotlib==3.10.7",
    "pywin32==311; platform_system == 'Windows'",
]

[project.scripts]
veldra = "veldra:main"
veldra-gui = "veldra.gui.server:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "playwright>=1.58.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-playwright>=0.7.2",
    "ruff==0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider --basetemp=.pytest_tmp"
markers = [
    "gui: GUI adapter related tests",
    "gui_e2e: Playwright GUI end-to-end tests",
    "gui_smoke: CI smoke subset of Playwright GUI end-to-end tests",
    "notebook_e2e: Notebook execution evidence and output contract tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src/veldra"]
omit = ["tests/*"]
